<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@style/FullscreenTheme"
    tools:context=".FullscreenActivity" >

    <Button
        android:id="@+id/east"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/south"
        android:layout_alignBottom="@+id/south"
        android:layout_toRightOf="@+id/south"
        android:text="@string/east" />

    <sofia.graphics.ShapeView
        android:id="@+id/shapeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/fight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/south" />

    <ProgressBar
        android:id="@+id/health"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/east"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/east" />

    <Button
        android:id="@+id/north"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/north" />

    <Button
        android:id="@+id/west"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/north"
        android:text="@string/west" />

    <Button
        android:id="@+id/south"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/west"
        android:text="@string/south" />

    <Button
        android:id="@+id/fight"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/defend"
        android:text="@string/fight" />

    <Button
        android:id="@+id/flee"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/health"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/flee" />

    <Button
        android:id="@+id/defend"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/east"
        android:text="@string/defend" />

</RelativeLayout>
